--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -33,4 +33,5 @@ dependencies {
     compile files('libs/LibFunSDK.jar')
     compile files('libs/stickygridheaders.jar')
     compile files('libs/zbar.jar')
+    compile 'com.android.support:recyclerview-v7:25.2.0'
 }
